<resources>
    <string name="app_name">EmployeeDetails</string>
    <string name="login_user_name">Username</string>
    <string name="login_user_password">Password</string>
    <string name="login_button">Login</string>
    <string name="login_register">Register?</string>
    <string name="login_last_name">Last Name</string>
    <string name="login_first_name">First Name</string>
    <string name="user_id">Employee ID</string>
    <string name="login_text">Register</string>
    <string name="login_failed">Login failed!</string>
    <string name="login_successful">Login successful!</string>

    <string name="add_button">Add</string>
    <string name="save_button">Save</string>
    <string name="delete_button">Delete</string>
    <string name="register_text">Register</string>
    <string name="add_user">Add Employee</string>
    <string name="add_employee">Employee added successfully!</string>
    <string name="add_failed">Couldn\'t add details!</string>

    <string name="title_activity_bottom_naviagtion">BottomNaviagtionActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="preference_file_key">com.example.EmployeeDetails.PREFERENCE_FILE_KEY</string>
    <string name="invalid_card">Invalid Card</string>
    <string name="title_activity_sample">SampleActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_send">Send</string>

    <string name="organisation">Organisation</string>
    <string name="employee">Employee</string>
    <string name="project">Project</string>
    <string name="task">Task</string>
    <string name="dashboard">Dashboard</string>

    <string name="employee_detail">Employee Details</string>
    <string name="update_employee">Update Details</string>
    <string name="add_new_employee">Add Employee</string>

    <string name="org_detail">Organisation Details</string>
    <string name="update_org">Update Details</string>
    <string name="add_new_org">Add Organisation</string>
    <string name="org_name">Name</string>
    <string name="org_id">Organisation ID</string>

    <string name="add_org">Organisation added successfully!</string>
    <string name="switch_text">Active</string>

    <string name="project_detail">Project Details</string>
    <string name="project_name">Name</string>
    <string name="project_id">Project ID</string>
    <string name="project_description">Description</string>
    <string name="start_date">Start date</string>
    <string name="add_new_project">Add Project</string>
    <string name="end_date">End date</string>
    <string name="manager">Manager</string>
    <string name="add_project">Project added successfully!</string>

    <string name="task_detail">Task Details</string>
    <string name="add_new_task">Add Task</string>
    <string name="task_name">Name</string>
    <string name="task_id">Task ID</string>
    <string name="task_description">Description</string>

    <string name="company_name">Organisation</string>
    <string name="team_name">Team</string>
    <string name="contact_no">Phone</string>
    <string name="role">Role</string>

    <string name="search_hint">Search...</string>
    <string name="app_label">Employee</string>
</resources>
