<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="project"
            type="com.example.employeedetails.data.model.Project" />

        <variable
            name="viewModel"
            type="com.example.employeedetails.ui.project.AddProjectViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".ui.project.AddProjectActivity"
        tools:showIn="@layout/activity_add_project">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/spacing_normal">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:hint="@string/project_id"
                app:error="@{viewModel.projectIdError}">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/projectId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@={viewModel.projectId}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:hint="@string/project_name"
                app:error="@{viewModel.nameError}">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/projectName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@={viewModel.name}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:hint="@string/project_description">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/projectDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="4"
                    android:text="@={viewModel.description}" />
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/spacing_small">


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/view"
                    android:hint="@string/start_date"
                    app:error="@{viewModel.startDateError}">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/startDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        bind:date="@{viewModel.startDate}"
                        bind:updateDate="@{viewModel.startDate}"/>
                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:id="@+id/view"
                    android:layout_width="1dp"
                    android:layout_height="1dp"
                    android:layout_centerHorizontal="true" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/view"
                    android:hint="@string/end_date"
                    app:error="@{viewModel.endDateError}">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/endDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        bind:date="@{viewModel.endDate}"
                        bind:updateDate="@{viewModel.endDate}"/>
                </com.google.android.material.textfield.TextInputLayout>
            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:hint="@string/manager">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/manager"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={viewModel.manager}"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/active"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:padding="@dimen/padding"
                android:text="@string/switch_text"
                android:textColor="@color/colorPrimary" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_button"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:onClick="@{() -> viewModel.onAddProjectClicked()}"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:text="@string/add_button" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</layout>