<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="project"
            type="com.example.employeedetails.data.model.Project" />

        <variable
            name="viewModel"
            type="com.example.employeedetails.ui.project.UpdateProjectViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".ui.project.AddProjectActivity"
        tools:showIn="@layout/activity_project_update">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/spacing_normal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/project_id"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/font_medium"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/projectId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_small"
                    android:textAllCaps="true"
                    android:text="@={viewModel.projectId}"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/font_medium" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:hint="@string/project_name"
                app:error="@{viewModel.nameError}">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/projectName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@={viewModel.name}"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:hint="@string/project_description">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/projectDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="4"
                    android:text="@={viewModel.description}"/>
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/spacing_small">


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/view"
                    android:hint="@string/start_date"
                    app:error="@{viewModel.startDateError}">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/startDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        bind:date="@{viewModel.startDate}"
                        bind:updateDate="@{viewModel.startDate}"/>
                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:id="@+id/view"
                    android:layout_width="1dp"
                    android:layout_height="1dp"
                    android:layout_centerHorizontal="true" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/view"
                    android:hint="@string/end_date"
                    app:error="@{viewModel.endDateError}">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/endDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        bind:date="@{viewModel.endDate}"
                        bind:updateDate="@{viewModel.endDate}"
                        />
                </com.google.android.material.textfield.TextInputLayout>
            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:hint="@string/manager">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/manager"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@={viewModel.manager}"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/active"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding"
                android:checked="@={viewModel.isActive}"
                android:text="@string/switch_text"
                android:textColor="@color/colorPrimary" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/save"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginRight="24dp"
                    android:onClick="@{() -> viewModel.onProjectUpdate()}"
                    android:layout_toLeftOf="@+id/button_view"
                    android:text="@string/save_button" />

                <View
                    android:id="@+id/button_view"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_centerHorizontal="true" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/delete"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginRight="24dp"
                    android:layout_toRightOf="@+id/button_view"
                    android:text="@string/delete_button" />
            </RelativeLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</layout>
