<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="org"
            type="com.example.employeedetails.data.model.Organisation" />

        <variable
            name="viewModel"
            type="com.example.employeedetails.ui.organisation.AddOrganisationViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".ui.organisation.AddOrgActivity"
        tools:showIn="@layout/activity_add_org">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            android:orientation="vertical"
            android:padding="@dimen/spacing_normal">


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/org_id"
                app:error="@{viewModel.orgIdError}">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/orgId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@={viewModel.orgId}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/org_name"
                app:error="@{viewModel.nameError}">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/orgName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@={viewModel.name}" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/active"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@={viewModel.isActive}"
                android:padding="@dimen/padding"
                android:text="@string/switch_text"
                android:textColor="@color/colorPrimary" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_button"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="@{() -> viewModel.onAddOrgClicked()}"
                android:text="@string/add_button" />

        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
